@@ -14,6 +14,7 @@ cm4all-beng-proxy (0.6.24) unstable; urgency=low
   * tcp-stock: limit number of connections per host to 256
   * translate, http-client, ajp-client, cgi, http-cache: verify the HTTP
     response status
+  * prototypes/translate.py: disallow "/../" and null bytes
   * allow 8192 connections by default
   * allow 65536 file handles by default
 
